No option to disable or reverse direction of multi-touch gesture on Linux #118233
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#118233
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Endeavour OS rolling
Graphics card: Iris Xe
Blender Version
Broken: 4.0
Worked: Never?
Short description of error
While on Windows and Mac the multitouch gestures can be disabled to use traditional touchpad scrolling setting for system, this cannot be done on Linux
For Windows and MacOS, this was done in
84ddb8b3cc
Exact steps for others to reproduce the error
Hi, thanks for the report. You mean "multi-touch gesture" property is missing. AFAIK touchpad gestures are only supported on Windows, Mac and linux-wayland:
84ddb8b3cc
Then this option should also be present for "linux-wayland", right?
Especially since on linux it doesn't work the best, so you could disable multi-touch gestures.
I'm somewhat confused— I'm on a Wayland Linux system and touchpad gestures are present, but their direction cannot be made natural.
cc @ideasman42
"Natural direction" is an OS option, there is no such option in Blender, only an option to disable multi-touch gestures.
I'm referring to the option discussed here: #97925 (comment)
No option to reverse touchpad behavior on Linuxto No option to disable multi-touch gesture on LinuxOk, updated the report. For consistency, there should be option to disable multi-touch gesture if linux/wayland supports it.
My report isn't about that though. I don't want to disable. I want to reverse direction. The link I provided was wrong though. Apologies.
Here's a discussion of what I mean. https://www.reddit.com/r/blender/comments/ltyjzn/blender_292_trackpad_controls_reversed_cant_find/
No option to disable multi-touch gesture on Linuxto No option to disable or reverse direction of multi-touch gesture on LinuxWhy has this been closed? Again, I do not want to disable, I want to reverse the direction.
Hi, now I'm confused about your requirement. First you said, multi-touch gesture option is missing in linux: #118233 (comment)
Campbell added that already in 4.1/4.2 branch:
a8ca12f2a8
You can grab 4.1/4.2 daily builds from: https://builder.blender.org/download/daily/
Now you're saying "I want to reverse the direction", you can either reverse the mouse direction from OS settings or blender preferences
"multi-touch gesture" option is added now for linux/wayland so closing this ticket
I want it to be so that when I swipe with two fingers from left to right, the viewport moves counterclockwise rather than clockwise.
There is no user preference in Blender to invert viewport rotation, was discussed in #86025.
But in your case it seems to be a Linux issue, see here #104272 for details.
I think you're right. My issue is similar to #107676
Closing as duplicates of #104272 & #107676.
Committed
d644873252
, resolved.