Fix #118233: No preference to disable multi-touch gestures on Wayland

Support this preference for Wayland, following macOS & WIN32 support.